--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,8 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&display=swap');
-
-$font-main:  "IBM Plex Sans", sans-serif;
-$font-text:  "Inika", serif;
+@import './lib/SCSS/fonts.scss';
 
 html, body {
     scroll-behavior: smooth;
@@ -30,7 +26,7 @@ html, body {
 .section-title {
     font-size: 4rem;
     text-align: center;
-    font-family: $font-main;
+    font-family: $font-text;
     margin-top: 10px;
     margin-bottom:10px;
 }
