--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -1,5 +1,5 @@
-$font-main: "IBM Plex Sans", sans-serif;
-$font-text: "Inika", serif;
+@import "../../lib/SCSS/fonts";
+
 
 .contact-section {
   display: flex;
@@ -38,7 +38,7 @@ $font-text: "Inika", serif;
     h1 {
       margin-top: auto;
       margin-bottom: 5%;
-      font-family: $font-main;
+      font-family: $font-text;
       font-size: 4.5rem;
       font-weight: 500;
       line-height: 100%;
@@ -174,6 +174,7 @@ $font-text: "Inika", serif;
       background-color: transparent;
       color: black;
       border: 2px solid black;
+      border-radius: 10px;
       font-size: 1rem;
       cursor: pointer;
       transition: background-color 0.3s ease;
