--- a/frontend/src/components/navigation/navigation.scss
+++ b/frontend/src/components/navigation/navigation.scss
@@ -1,5 +1,4 @@
-$font-main: "IBM Plex Sans", sans-serif;
-$font-text: "Inika", serif;
+@import "../../lib/SCSS/fonts";
 
 .nav-container {
   display: flex;
