--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -1,6 +1,8 @@
 @import "../../lib/SCSS/fonts";
 
 .gallery-section {
+  position: relative;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -125,6 +127,7 @@
     width: calc(3 * var(--s) + 2 * var(--g));
     aspect-ratio: 1;
     grid-template-columns: repeat(4, 1fr);
+    max-height: 70vh;
 
     @media (max-width: 1280px) {
       --s: 18vw;
